--- a/Cap.Domain/Cap.Domain.csproj
+++ b/Cap.Domain/Cap.Domain.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Abstract\Admin\ITrocaSenha.cs" />
     <Compile Include="Abstract\Admin\IUsuarioRegra.cs" />
     <Compile Include="Abstract\Cap\IBoleto.cs" />
+    <Compile Include="Abstract\Cap\ICaixa.cs" />
     <Compile Include="Abstract\Cap\IGrafico.cs" />
     <Compile Include="Abstract\Cap\ILiberacao.cs" />
     <Compile Include="Abstract\Cap\ILiberacaoPagamento.cs" />
@@ -126,6 +127,7 @@
     <Compile Include="Models\Cap\GrupoCusto.cs" />
     <Compile Include="Models\Cap\GrupoFinanceiro.cs" />
     <Compile Include="Models\Cap\GrupoLucro.cs" />
+    <Compile Include="Models\Cap\InfoCaixa.cs" />
     <Compile Include="Models\Cap\Logistica.cs" />
     <Compile Include="Models\Cap\Moeda.cs" />
     <Compile Include="Models\Cap\Motorista.cs" />
@@ -175,6 +177,7 @@
     <Compile Include="Service\Admin\UsuarioService.cs" />
     <Compile Include="Service\Cap\BancoService.cs" />
     <Compile Include="Service\Cap\BoletoService.cs" />
+    <Compile Include="Service\Cap\CaixaService.cs" />
     <Compile Include="Service\Cap\CentroCustoService.cs" />
     <Compile Include="Service\Cap\CentroLucroService.cs" />
     <Compile Include="Service\Cap\ContaFinanceiraService.cs" />
@@ -189,6 +192,7 @@
     <Compile Include="Service\Cap\GrupoCustoService.cs" />
     <Compile Include="Service\Cap\GrupoFinanceiroService.cs" />
     <Compile Include="Service\Cap\GrupoLucroService.cs" />
+    <Compile Include="Service\Cap\InfoCaixaService.cs" />
     <Compile Include="Service\Cap\LiberacaoPagamentoService.cs" />
     <Compile Include="Service\Cap\LiberacaoService.cs" />
     <Compile Include="Service\Cap\LogisticaService.cs" />
