--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Areas\Erp\Controllers\basico\UsuarioController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\BancoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\BoletoController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\CaixaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\CentroCustoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\CentroLucroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\ContaController.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Areas\Erp\Controllers\cap\GrupoCustoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoFinanceiroController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\GrupoLucroController.cs" />
+    <Compile Include="Areas\Erp\Controllers\cap\InfoCaixaController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\LiberacaoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\LiberacaoPagamentoController.cs" />
     <Compile Include="Areas\Erp\Controllers\cap\LogisticaController.cs" />
@@ -625,6 +627,8 @@
     <Content Include="Areas\Erp\Views\Arquivo\Edit.cshtml" />
     <Content Include="Areas\Erp\Views\Arquivo\Delete.cshtml" />
     <Content Include="Areas\Erp\Views\Grafico\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\Caixa\Index.cshtml" />
+    <Content Include="Areas\Erp\Views\InfoCaixa\Index.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
