--- a/Cap.Web/Cap.Web.csproj
+++ b/Cap.Web/Cap.Web.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Areas\Erp\Controllers\TelefoneController.cs" />
     <Compile Include="Areas\Erp\ErpAreaRegistration.cs" />
     <Compile Include="Areas\Erp\ModalInfoController.cs" />
+    <Compile Include="Areas\Erp\Models\BaixarParcelasSelecionadasModel.cs" />
     <Compile Include="Areas\Erp\Models\FornecedorModel.cs" />
     <Compile Include="Areas\Erp\Models\LoginUsuario.cs" />
     <Compile Include="Areas\Erp\Models\RequisicaoFornecedor.cs" />
@@ -630,6 +631,7 @@
     <Content Include="Areas\Erp\Views\Caixa\Index.cshtml" />
     <Content Include="Areas\Erp\Views\InfoCaixa\Index.cshtml" />
     <Content Include="Areas\Erp\Views\Caixa\GetParcelas.cshtml" />
+    <Content Include="Areas\Erp\Views\Caixa\BaixarParcelasSelecionadas.cshtml" />
     <None Include="CAPDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CAPDataSet.Designer.cs</LastGenOutput>
